# disclosure-crowler

./: LICENSE  README.md  pyproject.toml
disclosure/: main.py
disclosure/config/: config.py
disclosure/crawler/: each_date_file_cralwer.py  file_crawler.py  meta_file_crawler.py
disclosure/extractor/: xbrl_extractor.py
disclosure/util/: date_manager.py
disclosure_crawler/: main.py
disclosure_crawler/crawler/: disclosure_file_crawler.py
tests/: test_main.py
tests/util/: test_date_manager.py
trivial_script/: make_hist.py  make_hist_day_of_week.py
